finally fix ancient CSS width spacing issue on chessboard and playArea

--- a/src/frontend/styles/index.css
+++ b/src/frontend/styles/index.css
@@ -161,11 +161,11 @@ main {
 .playArea {
     margin-top: 1%;
     margin-left: 1%;
+    width: fit-content;
 }
 
 #chessboard {
-    position: absolute;
-    display: inline-block;
+    width: fit-content;
 }
 
 .chessRow {
